# SupplySense

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  generate_pages.py  package.json  pnpm-lock.yaml  requirements.txt
.github/workflows/: cd-staging.yml  ci-cd.yml  ci.yml
agents/: crew.py  crew_worker.py
agents/agents/: forecast_agent.py  inventory_agent.py  market_agent.py  procurement_agent.py  report_agent.py  risk_agent.py  supplier_agent.py  weather_agent.py
agents/tools/: forecast_tools.py  inventory_tools.py  market_tools.py  procurement_tools.py  report_tools.py  risk_tools.py  supplier_tools.py  weather_tools.py
backend/: db.py  main.py  pyproject.toml  requirements.txt
backend/api/routers/: events.py
backend/core/: __init__.py  config.py  database.py  events.py  rbac.py  security.py
backend/models/: __init__.py  agents.py  forecasting.py  inventory.py  procurement.py  risk.py  schema.py  user.py
backend/routers/: admin.py  alerts_router.py  analytics.py  auth.py  copilot.py  dashboard.py  decisions.py  explainability.py  forecast.py  inventory.py  logistics.py  market.py  mlops.py  notes.py  procurement.py  risk.py  simulator.py  suppliers.py  warehouse.py  weather.py
backend/schemas/: __init__.py  agents.py  auth.py  copilot.py  forecasting.py  inventory.py  mlops.py  procurement.py  risk.py
backend/services/: forecasting_service.py
copilot/: commands.py  indexer.py  rag_chain.py
datasets/processed/: live_prices.json  market_analysis.json
frontend/: next.config.ts  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(dashboard)/: layout.tsx  page.tsx
frontend/src/components/charts/: sparkline.tsx
frontend/src/lib/: providers.tsx
infra/docker/: Dockerfile.api  Dockerfile.ml  Dockerfile.web
infra/docker/postgres/: init-multiple-dbs.sh
infra/docker/prometheus/: prometheus.yml
k8s/: deployment.yaml
ml/: data_loader.py  eval_tft.py  lstm_model.py  tft_data_loader.py  train_lstm.py  train_tft.py
models/: lstm_metrics.json  tft_metrics.json
scripts/: check_schema.py  clean_data.py  commodity_tracker.py  create_market_tables.py  eda.py  email_alerter.py  feature_engineering.py  load_to_postgres.py  market_scheduler.py  price_analyst.py  query_top_combo.py  query_top_inventory.py  seed_auth.py  setup_postgres_schema.py  visualize_eda.py
streaming/: kafka_admin.py
(+54 files in other folders)
