[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "supplysense-api"
version = "1.0.0"
description = "SupplySense Enterprise AI Supply Chain OS - FastAPI Backend"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
    { name = "SupplySense Engineering", email = "eng@supplysense.ai" },
]
keywords = ["supply-chain", "fastapi", "ai", "enterprise"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business",
]
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "pydantic==2.7.4",
    "pydantic-settings==2.3.1",
    "sqlalchemy==2.0.31",
    "alembic==1.13.1",
    "asyncpg==0.29.0",
    "motor==3.4.0",
    "aioredis==2.0.1",
    "httpx==0.27.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.9",
    "celery==5.4.0",
    "redis==5.0.6",
    "openai==1.35.3",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "scikit-learn==1.5.0",
    "structlog==24.2.0",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "pytest-asyncio==0.23.7",
    "faker==25.8.0",
    "httpx==0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
supplysense-api = "main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "alembic*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
env = [
    "DATABASE_URL=postgresql+asyncpg://postgres:postgres@localhost:5432/supplysense_test",
    "MONGODB_URL=mongodb://localhost:27017",
    "REDIS_URL=redis://localhost:6379",
    "SECRET_KEY=test-secret-key-for-testing-only",
    "ENVIRONMENT=testing",
]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "ANN", "S", "B", "A"]
ignore = ["ANN101", "ANN102", "S101"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "ANN"]
"alembic/*" = ["ANN"]
"scripts/*" = ["ANN", "S311"]
